@@ -2,6 +2,7 @@
 
 * Tie PageRange widgets together
   Closes bug #165 "all or selected? a surprise that can bite like snake" again
+* Fix parsing the units of the resolution of imported images.
 
 
 1.2.3 (27.01.2014):
